--- a/postfix/Dockerfile
+++ b/postfix/Dockerfile
@@ -1,36 +1,34 @@
-FROM centos:7 as build-liblogfaf
+FROM centos:7 as build-libs
 RUN yum install -y epel-release
-RUN yum install -y libtool automake autoconf gcc file make git
+RUN yum install -y libtool automake autoconf gcc file make git sqlite-devel
 RUN git clone https://github.com/jkroepke/liblogfaf
-RUN cd liblogfaf &&  autoreconf -i && ./configure && make
+RUN cd liblogfaf && autoreconf -i && ./configure && make && cd
+RUN git clone git://git.yoctoproject.org/pseudo
+RUN cd pseudo && ./configure --prefix=/usr/local --without-passwd-fallback --enable-memory-db --bits=64 && make && cd
+
 
 FROM centos:7
 EXPOSE 25
-ENV TINI_VERSION v0.17.0
+ENV TINI_VERSION=v0.17.0
 #VOLUME ["/var/spool/postfix"]
 CMD ["/usr/libexec/postfix/master", "-d"]
 ENTRYPOINT ["/usr/local/bin/container-entrypoint.sh"]
-COPY --from=build-liblogfaf /liblogfaf/src/.libs/liblogfaf.so.0.0.0 /lib64/liblogfaf.so
-RUN yum install -y strace
-RUN setcap 'cap_net_bind_service=+ep' /usr/bin/strace
-RUN chmod u+s /usr/bin/strace
+COPY --from=build-libs /liblogfaf/src/.libs/liblogfaf.so.0.0.0 /lib64/liblogfaf.so
+COPY --from=build-libs /pseudo/lib64/libpseudo.so /lib64/libpseudo.so
+COPY --from=build-libs /pseudo/bin/ /usr/local/bin/
 
 RUN curl -LJ https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini -o /tini && \
     chmod +x /tini && \
-    yum install -y epel-release && \
-    yum install -y postfix fakeroot && \
+    yum install -y postfix && \
     yum clean all && \
     rm -rf /var/cache/yum
-RUN echo liblogfaf.so > /etc/ld.so.preload && \
-    setcap 'cap_net_bind_service=+ep' /usr/libexec/postfix/master && \
-    ln -s /usr/lib64/libfakeroot/libfakeroot-tcp.so /lib64/ && \
-    chmod u+s /lib64/liblogfaf.so /lib64/libfakeroot-*.so && \
-    postconf -e import_environment="$(postconf -d import_environment | cut -d ' ' -f3-) LD_PRELOAD LD_DEBUG FAKEROOTKEY FAKED_MODE" && \
+RUN setcap 'cap_net_bind_service=+ep' /usr/libexec/postfix/master && \
+    chmod u+s /lib64/liblogfaf.so /lib64/libpseudo.so && \
+    postconf -e import_environment="$(postconf -d import_environment | cut -d ' ' -f3-) LD_PRELOAD LD_DEBUG FAKEROOTKEY FAKED_MODE PSEUDO_PREFIX PSEUDO_BINDIR PSEUDO_LOCALSTATEDIR PSEUDO_PASSWD PSEUDO_PREFIX PSEUDO_LIBDIR" && \
     postconf -e inet_interfaces=all && \
     newaliases && \
     cp -a /var/spool/postfix/ /var/spool/postfix.bak && \
-    chgrp 0 -R /etc/passwd /etc/postfix/ /var/spool/postfix/ /var/spool/postfix.bak/ /var/lib/postfix/ && \
-    chmod g+rwX -R /etc/passwd /etc/postfix/ /var/spool/postfix/ /var/spool/postfix.bak/ /var/lib/postfix/
-
+    chgrp 0 -R /etc/postfix/ /var/spool/postfix/ /var/spool/postfix.bak/ /var/lib/postfix/ && \
+    chmod g+rwX -R /etc/postfix/ /var/spool/postfix/ /var/spool/postfix.bak/ /var/lib/postfix/
 
 ADD root /
