--- a/exim/Dockerfile
+++ b/exim/Dockerfile
@@ -1,12 +1,13 @@
 FROM        centos:7
 
-COPY        root .
-
 RUN         yum install epel-release -y \
             && yum install exim gettext -y \
             && yum clean all \
             && rm -rf /var/cache/yum \
-            && chmod +x /docker-entrypoint.sh
+            && chmod g+w /etc/passwd \
+            && setcap 'cap_net_bind_service=+ep' /usr/sbin/exim
+
+COPY        root .
 
 ENTRYPOINT  ["/docker-entrypoint.sh"]
-CMD         ["/usr/sbin/exim"]
+CMD         ["/usr/sbin/exim", "-bdf", "-v"]
