--- a/sendmail/Dockerfile
+++ b/sendmail/Dockerfile
@@ -2,22 +2,20 @@ FROM centos:7
 
 EXPOSE 25
 # VOLUME /var/spool/mqueue/
-CMD ["/usr/sbin/sendmail", "-bs", "-bD", "-n", "-v", "-d"]
-# /usr/sbin/sendmail -bs -bD -n -v -d
 ENTRYPOINT ["/entrypoint.sh"]
 
-RUN yum install -y sendmail sendmail-cf && yum clean all && rm -rf /var/cache/yum \
+RUN yum install -y sendmail sendmail-cf patch && yum clean all && rm -rf /var/cache/yum \
     && setcap 'cap_net_bind_service=+ep' /usr/sbin/sendmail.sendmail
 
-RUN echo "Connect:10 RELAY" >> /etc/mail/access && \
-    echo openshift >> /etc/mail/trusted-users && \
-    echo DAEMON_OPTIONS\(\`Port=smtp, Name=MTA\'\)dnl  >> /etc/mail/sendmail.mc && \
-    sed -i "/.*EXPOSED_USER.*/d" /etc/mail/sendmail.mc && \
+RUN sed -i "/.*EXPOSED_USER.*/d" /etc/mail/sendmail.mc && \
     sed -i "/.*accept_unresolvable_domains.*/d" /etc/mail/sendmail.mc && \
     sed -i "/.*local_procmail.*/d" /etc/mail/sendmail.mc && \
-    chmod g+w -R /etc/mail/ /etc/passwd && \
-    chmod 770 -R /var/spool/mqueue && \
+    sed -i "/.*Addr=127.0.0.1.*/d" /etc/mail/sendmail.mc && \
+    chmod g+w -R /etc/mail/ /etc/passwd /usr/share/sendmail-cf/m4/proto.m4 && \
+    chmod 777 -R /var/spool/mqueue && \
     chgrp 0 -R /var/spool/mqueue && \
     /etc/mail/make
+
+CMD ["/usr/sbin/sendmail", "-bs", "-bD", "-v", "-d0.1"]
 
 COPY root /
