Make sendmail ready

--- a/sendmail/Dockerfile
+++ b/sendmail/Dockerfile
@@ -4,8 +4,9 @@ EXPOSE 25
 # VOLUME /var/spool/mqueue/
 ENTRYPOINT ["/entrypoint.sh"]
 
-RUN yum install -y sendmail sendmail-cf patch && yum clean all && rm -rf /var/cache/yum \
+RUN yum install -y patch sendmail sendmail-cf cyrus-sasl-plain cyrus-sasl-ntlm && yum clean all && rm -rf /var/cache/yum \
     && setcap 'cap_net_bind_service=+ep' /usr/sbin/sendmail.sendmail
+COPY root /
 
 RUN sed -i "/.*EXPOSED_USER.*/d" /etc/mail/sendmail.mc && \
     sed -i "/.*accept_unresolvable_domains.*/d" /etc/mail/sendmail.mc && \
@@ -14,8 +15,6 @@ RUN sed -i "/.*EXPOSED_USER.*/d" /etc/mail/sendmail.mc && \
     chmod g+w -R /etc/mail/ /etc/passwd /usr/share/sendmail-cf/m4/proto.m4 && \
     chmod 777 -R /var/spool/mqueue && \
     chgrp 0 -R /var/spool/mqueue && \
-    /etc/mail/make
+    chmod u+s /lib64/liblogfaf.so
 
-CMD ["/usr/sbin/sendmail", "-bs", "-bD", "-v", "-d0.1"]
-
-COPY root /
+CMD ["/usr/sbin/sendmail", "-bs", "-bD", "-v"]
