Make sendmail ready

--- a/sendmail/Dockerfile
+++ b/sendmail/Dockerfile
@@ -2,6 +2,7 @@ FROM        centos:7
 
 EXPOSE      25
 VOLUME      /var/spool/mqueue/
+HEALTHCHECK CMD ["/healthcheck.sh"]
 ENTRYPOINT  ["/entrypoint.sh"]
 CMD         ["/usr/sbin/sendmail", "-bs", "-bD", "-Am"]
 
