Removed latest layer

--- a/sendmail/Dockerfile
+++ b/sendmail/Dockerfile
@@ -6,6 +6,8 @@ HEALTHCHECK CMD ["/healthcheck.sh"]
 ENTRYPOINT  ["/entrypoint.sh"]
 CMD         ["/usr/sbin/sendmail", "-bs", "-bD", "-Am"]
 
+COPY        root /
+
 RUN         yum install -y patch sendmail sendmail-cf cyrus-sasl-plain cyrus-sasl-ntlm && yum clean all && rm -rf /var/cache/yum && \
             setcap 'cap_net_bind_service=+ep' /usr/sbin/sendmail.sendmail && \
             sed -i "/.*EXPOSED_USER.*/d" /etc/mail/sendmail.mc && \
@@ -15,10 +17,7 @@ RUN         yum install -y patch sendmail sendmail-cf cyrus-sasl-plain cyrus-sas
             newaliases && \
             chmod g+w -R  /etc/aliases /etc/aliases.db /etc/mail/ /etc/passwd /usr/share/sendmail-cf/m4/proto.m4 && \
             chmod 777 -R /var/spool/mqueue && \
-            chgrp 0 -R /etc/aliases /etc/aliases.db /var/spool/mqueue
-
-COPY        root /
-
-RUN         chmod u+s /lib64/liblogfaf.so
+            chgrp 0 -R /etc/aliases /etc/aliases.db /var/spool/mqueue && \
+            chmod u+s /lib64/liblogfaf.so
 
 USER        1001
